@@ -9,10 +9,9 @@ import com.mentoai.mentoai.controller.dto.UserProfileResponse;
 import com.mentoai.mentoai.controller.mapper.ActivityMapper;
 import com.mentoai.mentoai.entity.ActivityEntity;
 import com.mentoai.mentoai.entity.ActivityEntity.ActivityType;
-import com.mentoai.mentoai.entity.UserInterestEntity;
+import com.mentoai.mentoai.entity.ActivityTagEntity;
+import com.mentoai.mentoai.entity.TagEntity;
 import com.mentoai.mentoai.repository.ActivityRepository;
-import com.mentoai.mentoai.repository.TagRepository;
-import com.mentoai.mentoai.repository.UserInterestRepository;
 import com.mentoai.mentoai.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -23,6 +22,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -32,100 +32,50 @@ import java.util.stream.Collectors;
 public class RecommendService {
     
     private final ActivityRepository activityRepository;
-    private final UserInterestRepository userInterestRepository;
     private final UserRepository userRepository;
     private final GeminiService geminiService;
     private final RoleFitService roleFitService;
-    private final TagRepository tagRepository;
     private final UserProfileService userProfileService;
-    private final UserInterestService userInterestService;
-    private final TargetRoleService targetRoleService;
+    private final ActivityRoleMatchService activityRoleMatchService;
     
-    // 사용자 맞춤 활동 추천
+    // 사용자 맞춤 활동 추천 (targetRole 기반)
     public List<ActivityEntity> getRecommendations(Long userId, Integer limit, String type, Boolean campusOnly) {
-        // 사용자 존재 확인
         if (!userRepository.existsById(userId)) {
             throw new IllegalArgumentException("사용자를 찾을 수 없습니다: " + userId);
         }
-        
-        // 사용자 관심사 조회
-        List<UserInterestEntity> userInterests = userInterestRepository.findByUserIdOrderByScoreDesc(userId);
-        
-        if (userInterests.isEmpty()) {
-            // 관심사가 없으면 빈 리스트 반환 (모든 활동 반환 X)
-            log.warn("User {} has no interests, returning empty recommendations", userId);
+
+        UserProfileResponse profile = userProfileService.getProfile(userId);
+        String targetRoleId = profile.targetRoleId();
+        if (targetRoleId == null || targetRoleId.isBlank()) {
+            log.warn("User {} has no targetRoleId configured. Returning empty recommendations.", userId);
             return List.of();
         }
-        
-        // 관심사 기반 추천 로직
-        List<ActivityEntity> recommendations = new ArrayList<>();
-        
-        // 1. 관심사 태그와 매칭되는 활동들 찾기
-        List<Long> tagIds = userInterests.stream()
-                .map(UserInterestEntity::getTagId)
+
+        int safeLimit = (limit == null || limit <= 0) ? 10 : limit;
+        int fetchSize = Math.min(Math.max(safeLimit * 2, safeLimit), 200);
+        List<ActivityRoleMatchService.RoleMatch> matches =
+                activityRoleMatchService.findRoleMatches(targetRoleId, fetchSize);
+        if (matches.isEmpty()) {
+            log.warn("No Qdrant matches for user {} and targetRole {}", userId, targetRoleId);
+            return List.of();
+        }
+
+        List<Long> ids = matches.stream()
+                .map(ActivityRoleMatchService.RoleMatch::activityId)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+        Map<Long, ActivityEntity> activityMap = activityRepository.findAllById(ids).stream()
+                .collect(Collectors.toMap(ActivityEntity::getId, Function.identity()));
+
+        ActivityType activityType = parseActivityType(type);
+
+        return matches.stream()
+                .map(match -> activityMap.get(match.activityId()))
+                .filter(Objects::nonNull)
+                .filter(activity -> matchesBasicFilters(activity, activityType, campusOnly))
+                .limit(safeLimit)
                 .collect(Collectors.toList());
-        
-        Pageable pageable = PageRequest.of(0, limit * 2, Sort.by(Sort.Direction.DESC, "createdAt"));
-        
-        // 태그 매칭 활동 조회
-        List<ActivityEntity> tagMatchedActivities = activityRepository.findByFilters(
-                null, // 검색어 없음
-                type != null ? ActivityType.valueOf(type.toUpperCase()) : null,
-                campusOnly,
-                null, // 상태 필터 없음
-                pageable
-        ).getContent();
-        
-        // 태그 매칭 점수 계산
-        Map<ActivityEntity, Double> activityScores = new HashMap<>();
-        
-        for (ActivityEntity activity : tagMatchedActivities) {
-            double score = calculateActivityScore(activity, userInterests);
-            if (score > 0) {
-                activityScores.put(activity, score);
-            }
-        }
-        
-        // 점수 순으로 정렬하여 추천
-        recommendations = activityScores.entrySet().stream()
-                .sorted(Map.Entry.<ActivityEntity, Double>comparingByValue().reversed())
-                .limit(limit)
-                .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
-        
-        // 추천이 부족해도 인기 활동으로 보완하지 않음 (사용자 맞춤만 반환)
-        return recommendations;
-    }
-    
-    // 활동 점수 계산 (관심사 기반)
-    private double calculateActivityScore(ActivityEntity activity, List<UserInterestEntity> userInterests) {
-        double score = 0.0;
-        
-        // 활동의 태그들과 사용자 관심사 매칭
-        if (activity.getActivityTags() != null && !activity.getActivityTags().isEmpty()) {
-            for (var activityTag : activity.getActivityTags()) {
-                for (UserInterestEntity userInterest : userInterests) {
-                    if (activityTag.getTag().getId().equals(userInterest.getTagId())) {
-                        // 관심사 점수(1-5)를 0-50점 범위로 변환 (10배 증가)
-                        score += userInterest.getScore() * 10.0;
-                    }
-                }
-            }
-        }
-        
-        // 활동 유형 선호도 (간단한 규칙 기반)
-        if (activity.getType() == ActivityType.STUDY) {
-            score += 5.0;  // 0.2 -> 5.0
-        } else if (activity.getType() == ActivityType.CONTEST) {
-            score += 3.0;  // 0.1 -> 3.0
-        }
-        
-        // 캠퍼스 활동 가중치
-        if (activity.getIsCampus() != null && activity.getIsCampus()) {
-            score += 2.0;  // 0.1 -> 2.0
-        }
-        
-        return score;
     }
     
     // 의미 기반 검색 (간단한 키워드 매칭)
@@ -174,23 +124,6 @@ public class RecommendService {
             }
         }
         
-        // 사용자 관심사 기반 가중치 적용
-        if (userId != null && !userId.isEmpty()) {
-            try {
-                Long userIdLong = Long.valueOf(userId);
-                List<UserInterestEntity> userInterests = userInterestRepository.findByUserIdOrderByScoreDesc(userIdLong);
-                
-                if (!userInterests.isEmpty()) {
-                    activityScores.replaceAll((activity, score) -> {
-                        double interestScore = calculateActivityScore(activity, userInterests);
-                        return score + (interestScore * 0.3); // 관심사 가중치 30%
-                    });
-                }
-            } catch (NumberFormatException e) {
-                // userId가 잘못된 형식이면 무시
-            }
-        }
-        
         // 점수 순으로 정렬하여 반환
         return activityScores.entrySet().stream()
                 .sorted(Map.Entry.<ActivityEntity, Double>comparingByValue().reversed())
@@ -225,23 +158,6 @@ public class RecommendService {
                 }
             } catch (Exception e) {
                 log.warn("Failed to generate embedding for activity {}: {}", activity.getId(), e.getMessage());
-            }
-        }
-        
-        // 사용자 관심사 기반 가중치 적용
-        if (userId != null && !userId.isEmpty()) {
-            try {
-                Long userIdLong = Long.valueOf(userId);
-                List<UserInterestEntity> userInterests = userInterestRepository.findByUserIdOrderByScoreDesc(userIdLong);
-                
-                if (!userInterests.isEmpty()) {
-                    activityScores.replaceAll((activity, score) -> {
-                        double interestScore = calculateActivityScore(activity, userInterests);
-                        return score * 0.7 + (interestScore * 30); // 임베딩 70%, 관심사 30%
-                    });
-                }
-            } catch (NumberFormatException e) {
-                // userId가 잘못된 형식이면 무시
             }
         }
         
@@ -403,108 +319,74 @@ public class RecommendService {
     public record SemanticSearchResult(ActivityEntity activity, double score) {
     }
     
-    // 점수 포함 활동 추천
+    // 점수 포함 활동 추천 (targetRole 기반)
     public List<ActivityRecommendationResponse> getRecommendationsWithScores(
-            Long userId, Integer limit, String type, Boolean campusOnly, String targetRole) {
-        // 사용자 존재 확인
+            Long userId, Integer limit, String type, Boolean campusOnly, String targetRoleOverride) {
+
         if (!userRepository.existsById(userId)) {
             throw new IllegalArgumentException("사용자를 찾을 수 없습니다: " + userId);
         }
-        
-        // 기본 추천 활동 조회
-        List<ActivityEntity> activities = getRecommendations(userId, limit * 2, type, campusOnly);
-        
-        // 사용자 관심사 조회
-        List<UserInterestEntity> userInterests = userInterestRepository.findByUserIdOrderByScoreDesc(userId);
-        
-        // RoleFitScore 계산 (타겟 직무가 있는 경우)
-        Double roleFitScore = null;
-        if (targetRole != null && !targetRole.trim().isEmpty()) {
-            try {
-                var roleFitResponse = roleFitService.calculateRoleFit(userId, new RoleFitRequest(targetRole, null));
-                roleFitScore = roleFitResponse.roleFitScore();
-            } catch (Exception e) {
-                log.warn("Failed to calculate role fit score for user {} and role {}: {}", userId, targetRole, e.getMessage());
+
+        UserProfileResponse profile = userProfileService.getProfile(userId);
+        String targetRoleId = (targetRoleOverride != null && !targetRoleOverride.isBlank())
+                ? targetRoleOverride.trim()
+                : profile.targetRoleId();
+
+        if (targetRoleId == null || targetRoleId.isBlank()) {
+            log.warn("User {} requested scored recommendations but targetRoleId is missing.", userId);
+            return List.of();
+        }
+
+        int safeLimit = (limit == null || limit <= 0) ? 10 : limit;
+        int fetchSize = Math.min(safeLimit * 3, 200);
+        List<ActivityRoleMatchService.RoleMatch> matches =
+                activityRoleMatchService.findRoleMatches(targetRoleId, fetchSize);
+        if (matches.isEmpty()) {
+            log.warn("No Qdrant matches for scored recommendations: user={}, targetRole={}", userId, targetRoleId);
+            return List.of();
+        }
+
+        List<Long> ids = matches.stream()
+                .map(ActivityRoleMatchService.RoleMatch::activityId)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+        Map<Long, ActivityEntity> activityMap = activityRepository.findAllById(ids).stream()
+                .collect(Collectors.toMap(ActivityEntity::getId, Function.identity()));
+
+        ActivityType activityType = parseActivityType(type);
+        Double roleFitScore = calculateRoleFitScore(userId, targetRoleId);
+
+        List<ActivityRecommendationResponse> responses = new ArrayList<>();
+        for (ActivityRoleMatchService.RoleMatch match : matches) {
+            ActivityEntity activity = activityMap.get(match.activityId());
+            if (activity == null) {
+                continue;
+            }
+            if (!matchesBasicFilters(activity, activityType, campusOnly)) {
+                continue;
+            }
+
+            double similarityScore = match.score() * 100.0;
+            double recommendationScore = roleFitScore != null
+                    ? (similarityScore * 0.7) + (roleFitScore * 0.3)
+                    : similarityScore;
+
+            Double expectedScoreIncrease = calculateExpectedScoreIncrease(activity, userId, targetRoleId);
+            ActivityResponse activityResponse = ActivityMapper.toResponse(activity);
+            responses.add(new ActivityRecommendationResponse(
+                    activityResponse,
+                    Math.round(recommendationScore * 10.0) / 10.0,
+                    roleFitScore,
+                    expectedScoreIncrease
+            ));
+
+            if (responses.size() >= safeLimit) {
+                break;
             }
         }
-        
-        // 각 활동에 대해 점수 계산
-        Map<ActivityEntity, ActivityRecommendationResponse> scoredActivities = new HashMap<>();
-        
-        for (ActivityEntity activity : activities) {
-            try {
-                // 1. 관심사 기반 점수 (0-100)
-                double interestScore = calculateActivityScore(activity, userInterests) * 100;
-                
-                // 2. Gemini 임베딩 기반 점수 (0-100) - 활동 텍스트 기반
-                double embeddingScore = 0.0;
-                try {
-                    String activityText = buildActivityText(activity);
-                    List<Double> activityEmbedding = geminiService.generateEmbedding(activityText);
-                    
-                    // 사용자 프로필 기반 검색어 생성 (간단한 키워드 추출)
-                    String userQuery = buildUserQuery(userId, targetRole);
-                    if (userQuery != null && !userQuery.trim().isEmpty()) {
-                        List<Double> queryEmbedding = geminiService.generateEmbedding(userQuery);
-                        double similarity = geminiService.cosineSimilarity(queryEmbedding, activityEmbedding);
-                        embeddingScore = similarity * 100;
-                    }
-                } catch (Exception e) {
-                    log.debug("Failed to calculate embedding score for activity {}: {}", activity.getId(), e.getMessage());
-                }
-                
-                // 3. 최종 추천 점수 계산
-                // 공식: 0.5 * 임베딩 점수 + 0.3 * RoleFitScore + 0.2 * 관심사 점수
-                double recommendationScore;
-                if (roleFitScore != null) {
-                    recommendationScore = 0.5 * embeddingScore + 0.3 * roleFitScore + 0.2 * interestScore;
-                } else {
-                    recommendationScore = 0.7 * embeddingScore + 0.3 * interestScore;
-                }
-                
-                // 4. 예상 점수 증가량 계산
-                Double expectedScoreIncrease = calculateExpectedScoreIncrease(activity, userId, targetRole);
-                
-                ActivityResponse activityResponse = ActivityMapper.toResponse(activity);
-                scoredActivities.put(activity, new ActivityRecommendationResponse(
-                        activityResponse,
-                        Math.round(recommendationScore * 10.0) / 10.0, // 소수점 1자리
-                        roleFitScore,
-                        expectedScoreIncrease
-                ));
-            } catch (Exception e) {
-                log.warn("Failed to calculate score for activity {}: {}", activity.getId(), e.getMessage());
-            }
-        }
-        
-        // 점수 순으로 정렬하여 반환
-        return scoredActivities.values().stream()
-                .sorted(Comparator.comparing(ActivityRecommendationResponse::recommendationScore).reversed())
-                .limit(limit)
-                .collect(Collectors.toList());
-    }
-    
-    // 사용자 쿼리 생성 (프로필 기반)
-    private String buildUserQuery(Long userId, String targetRole) {
-        StringBuilder query = new StringBuilder();
-        
-        if (targetRole != null && !targetRole.trim().isEmpty()) {
-            query.append(targetRole).append(" ");
-        }
-        
-        // 사용자 관심사 태그 추가
-        List<UserInterestEntity> userInterests = userInterestRepository.findByUserIdOrderByScoreDesc(userId);
-        if (!userInterests.isEmpty()) {
-            for (UserInterestEntity interest : userInterests) {
-                tagRepository.findById(interest.getTagId()).ifPresent(tag -> {
-                    if (tag.getName() != null) {
-                        query.append(tag.getName()).append(" ");
-                    }
-                });
-            }
-        }
-        
-        return query.toString().trim();
+
+        return responses;
     }
     
     // 활동 완료 시 예상 점수 증가량 계산
@@ -552,50 +434,21 @@ public class RecommendService {
             throw new IllegalArgumentException("사용자를 찾을 수 없습니다: " + request.userId());
         }
         
-        // 1. 사용자 프로필 및 관심사 수집
+        // 1. 사용자 프로필 수집
         UserProfileResponse userProfile = userProfileService.getProfile(request.userId());
-        List<UserInterestEntity> userInterests = userInterestService.getUserInterests(request.userId());
-        
+
         // 2. 관련 활동 검색 (Retrieval)
         List<ActivityEntity> candidateActivities = retrieveRelevantActivities(
-                request, userProfile, userInterests, request.getTopKOrDefault() * 2
+                request, userProfile, request.getTopKOrDefault() * 2
         );
-        
-        // 추가 fallback: 여전히 비어있으면 사용자 관심사 기반으로 재시도
-        if (candidateActivities.isEmpty() && !userInterests.isEmpty()) {
-            log.warn("No candidate activities found after retrieval, trying user interest-based search");
-            // 사용자 관심사 태그로 필터링된 활동만 반환
-            List<String> interestTagNames = userInterests.stream()
-                    .map(interest -> tagRepository.findById(interest.getTagId())
-                            .map(tag -> tag.getName())
-                            .orElse(null))
-                    .filter(name -> name != null)
-                    .distinct()
-                    .collect(Collectors.toList());
-            
-            if (!interestTagNames.isEmpty()) {
-                Pageable pageable = PageRequest.of(0, request.getTopKOrDefault() * 2, 
-                        Sort.by(Sort.Direction.DESC, "createdAt"));
-                candidateActivities = activityRepository.findByComplexFilters(
-                        null, null, null, null,
-                        interestTagNames,
-                        pageable
-                ).getContent();
-            }
-            
-            // 여전히 비어있으면 빈 응답 반환 (사용자 맞춤 활동이 없음)
-            if (candidateActivities.isEmpty()) {
-                log.warn("No personalized activities found for user {}", request.userId());
-                return new RecommendResponse(List.of());
-            }
-        } else if (candidateActivities.isEmpty()) {
-            // 관심사도 없고 검색 결과도 없으면 빈 응답 반환
-            log.warn("No activities found and user has no interests");
+
+        if (candidateActivities.isEmpty()) {
+            log.warn("No personalized activities found for user {}", request.userId());
             return new RecommendResponse(List.of());
         }
         
         // 3. Gemini에 RAG 프롬프트 구성 및 전송
-        String prompt = buildRAGPrompt(request, userProfile, userInterests, candidateActivities);
+        String prompt = buildRAGPrompt(request, userProfile, candidateActivities);
         String geminiResponse;
         try {
             geminiResponse = geminiService.generateText(prompt);
@@ -619,80 +472,34 @@ public class RecommendService {
     private List<ActivityEntity> retrieveRelevantActivities(
             RecommendRequest request,
             UserProfileResponse userProfile,
-            List<UserInterestEntity> userInterests,
             int limit) {
-        
-        List<ActivityEntity> activities = new ArrayList<>();
-        
-        // query가 있으면 의미 기반 검색
-        if (request.query() != null && !request.query().trim().isEmpty()) {
-            List<SemanticSearchResult> searchResults = semanticSearchWithScores(
-                    request.query(),
-                    limit,
-                    request.userId().toString()
-            );
-            activities.addAll(searchResults.stream()
-                    .map(SemanticSearchResult::activity)
-                    .toList());
+
+        String targetRoleId = userProfile.targetRoleId();
+        if (targetRoleId == null || targetRoleId.isBlank()) {
+            return List.of();
         }
-        
-        // preferTags가 있으면 태그 기반 검색
-        if (request.preferTags() != null && !request.preferTags().isEmpty()) {
-            Pageable pageable = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "createdAt"));
-            // 태그 이름으로 활동 검색 (간단한 구현)
-            for (String tagName : request.preferTags()) {
-                List<ActivityEntity> tagActivities = activityRepository.findByFilters(
-                        tagName,
-                        null,
-                        null,
-                        null,
-                        pageable
-                ).getContent();
-                activities.addAll(tagActivities);
-            }
+
+        int fetchSize = Math.min(limit * 3, 200);
+        List<ActivityRoleMatchService.RoleMatch> matches =
+                activityRoleMatchService.findRoleMatches(targetRoleId, fetchSize);
+        if (matches.isEmpty()) {
+            return List.of();
         }
-        
-        // 사용자 관심사 기반 검색
-        if (!userInterests.isEmpty() && request.getUseProfileHintsOrDefault()) {
-            Pageable pageable = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "createdAt"));
-            List<ActivityEntity> interestActivities = getRecommendations(
-                    request.userId(),
-                    limit,
-                    null,
-                    null
-            );
-            activities.addAll(interestActivities);
-        }
-        
-        // 중복 제거 및 정렬
-        activities = activities.stream()
+
+        List<Long> ids = matches.stream()
+                .map(ActivityRoleMatchService.RoleMatch::activityId)
+                .filter(Objects::nonNull)
                 .distinct()
+                .toList();
+        Map<Long, ActivityEntity> activityMap = activityRepository.findAllById(ids).stream()
+                .collect(Collectors.toMap(ActivityEntity::getId, Function.identity()));
+
+        return matches.stream()
+                .map(match -> activityMap.get(match.activityId()))
+                .filter(Objects::nonNull)
+                .filter(activity -> matchesRequestFilters(activity, request))
                 .limit(limit)
                 .collect(Collectors.toList());
-        
-        // 결과가 없으면 사용자 관심사 기반 추천으로 fallback (일반 활동 목록 X)
-        if (activities.isEmpty() && !userInterests.isEmpty()) {
-            log.warn("No relevant activities found, using user interest-based recommendations");
-            // 사용자 관심사 태그로 필터링된 활동만 반환
-            List<String> interestTagNames = userInterests.stream()
-                    .map(interest -> tagRepository.findById(interest.getTagId())
-                            .map(tag -> tag.getName())
-                            .orElse(null))
-                    .filter(name -> name != null)
-                    .distinct()
-                    .collect(Collectors.toList());
-            
-            if (!interestTagNames.isEmpty()) {
-                Pageable pageable = PageRequest.of(0, limit, Sort.by(Sort.Direction.DESC, "createdAt"));
-                activities = activityRepository.findByComplexFilters(
-                        null, null, null, null,
-                        interestTagNames,
-                        pageable
-                ).getContent();
-            }
-        }
-        
-        return activities;
     }
     
     /**
@@ -701,7 +508,6 @@ public class RecommendService {
     private String buildRAGPrompt(
             RecommendRequest request,
             UserProfileResponse userProfile,
-            List<UserInterestEntity> userInterests,
             List<ActivityEntity> activities) {
         
         StringBuilder prompt = new StringBuilder();
@@ -720,19 +526,6 @@ public class RecommendService {
         // 관심 분야
         if (userProfile.interestDomains() != null && !userProfile.interestDomains().isEmpty()) {
             prompt.append("관심 분야: ").append(String.join(", ", userProfile.interestDomains())).append("\n");
-        }
-        
-        // 관심 태그
-        if (!userInterests.isEmpty()) {
-            List<String> interestTags = userInterests.stream()
-                    .map(interest -> tagRepository.findById(interest.getTagId())
-                            .map(tag -> tag.getName())
-                            .orElse(""))
-                    .filter(name -> !name.isEmpty())
-                    .toList();
-            if (!interestTags.isEmpty()) {
-                prompt.append("관심 태그: ").append(String.join(", ", interestTags)).append("\n");
-            }
         }
         
         // 기술 스택
@@ -876,18 +669,15 @@ public class RecommendService {
             RecommendRequest request,
             List<ActivityEntity> candidateActivities) {
         
-        // preferTags에서 targetRole 추출 시도
-        String targetRole = null;
-        if (request.preferTags() != null && !request.preferTags().isEmpty()) {
-            targetRole = request.preferTags().get(0);
-        }
+        UserProfileResponse profile = userProfileService.getProfile(request.userId());
+        String targetRoleId = profile.targetRoleId();
         
         List<ActivityRecommendationResponse> scored = getRecommendationsWithScores(
                 request.userId(),
                 request.getTopKOrDefault(),
                 null,
                 null,
-                targetRole
+                targetRoleId
         );
         
         List<RecommendResponse.RecommendItem> items = scored.stream()
@@ -909,7 +699,94 @@ public class RecommendService {
         if (rec.roleFitScore() != null) {
             reason.append(String.format("직무 적합도: %.1f점. ", rec.roleFitScore()));
         }
-        reason.append("사용자의 관심사와 프로필을 기반으로 추천되었습니다.");
+        reason.append("사용자의 목표 직무와 프로필을 기반으로 추천되었습니다.");
         return reason.toString();
+    }
+
+    private boolean matchesRequestFilters(ActivityEntity activity, RecommendRequest request) {
+        if (request.query() != null && !request.query().isBlank()) {
+            String normalizedQuery = request.query().trim().toLowerCase();
+            if (!containsKeyword(activity, normalizedQuery)) {
+                return false;
+            }
+        }
+
+        if (request.preferTags() != null && !request.preferTags().isEmpty()) {
+            Set<String> preferred = request.preferTags().stream()
+                    .filter(tag -> tag != null && !tag.isBlank())
+                    .map(tag -> tag.trim().toLowerCase())
+                    .collect(Collectors.toSet());
+            if (!preferred.isEmpty()) {
+                if (activity.getActivityTags() == null || activity.getActivityTags().isEmpty()) {
+                    return false;
+                }
+                boolean matched = activity.getActivityTags().stream()
+                        .map(ActivityTagEntity::getTag)
+                        .filter(Objects::nonNull)
+                        .map(TagEntity::getName)
+                        .filter(Objects::nonNull)
+                        .map(String::toLowerCase)
+                        .anyMatch(preferred::contains);
+                if (!matched) {
+                    return false;
+                }
+            }
+        }
+
+        return true;
+    }
+
+    private boolean matchesBasicFilters(ActivityEntity activity, ActivityType type, Boolean campusOnly) {
+        if (type != null && activity.getType() != type) {
+            return false;
+        }
+        if (campusOnly != null) {
+            boolean isCampusActivity = Boolean.TRUE.equals(activity.getIsCampus());
+            if (!campusOnly.equals(isCampusActivity)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    private boolean containsKeyword(ActivityEntity activity, String keyword) {
+        if (keyword == null || keyword.isBlank()) {
+            return true;
+        }
+        String title = activity.getTitle() != null ? activity.getTitle().toLowerCase() : "";
+        if (title.contains(keyword)) {
+            return true;
+        }
+        String summary = activity.getSummary() != null ? activity.getSummary().toLowerCase() : "";
+        if (summary.contains(keyword)) {
+            return true;
+        }
+        String content = activity.getContent() != null ? activity.getContent().toLowerCase() : "";
+        return content.contains(keyword);
+    }
+
+    private Double calculateRoleFitScore(Long userId, String targetRoleId) {
+        if (targetRoleId == null || targetRoleId.isBlank()) {
+            return null;
+        }
+        try {
+            var roleFitResponse = roleFitService.calculateRoleFit(userId, new RoleFitRequest(targetRoleId, null));
+            return roleFitResponse.roleFitScore();
+        } catch (Exception e) {
+            log.warn("Failed to calculate role fit score for user {} and role {}: {}", userId, targetRoleId, e.getMessage());
+            return null;
+        }
+    }
+
+    private ActivityType parseActivityType(String type) {
+        if (type == null || type.isBlank()) {
+            return null;
+        }
+        try {
+            return ActivityType.valueOf(type.trim().toUpperCase());
+        } catch (IllegalArgumentException ex) {
+            log.warn("Unsupported activity type filter: {}", type);
+            return null;
+        }
     }
 }
